// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a critical StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow critical"
    role="status"
  >
    <div
      class="statusIndicatorWrapper"
    >
      <span
        class="statusIndicator"
        data-testid="ATL-Status-Indicator-critical"
      />
    </div>
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders a successful StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow success"
    role="status"
  >
    <div
      class="statusIndicatorWrapper"
    >
      <span
        class="statusIndicator"
        data-testid="ATL-Status-Indicator-success"
      />
    </div>
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders a warning StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow warning"
    role="status"
  >
    <div
      class="statusIndicatorWrapper"
    >
      <span
        class="statusIndicator"
        data-testid="ATL-Status-Indicator-warning"
      />
    </div>
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders an end-aligned StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow informative labelTextEndAligned"
    role="status"
  >
    <div
      class="statusIndicatorWrapper"
    >
      <span
        class="statusIndicator"
        data-testid="ATL-Status-Indicator-informative"
      />
    </div>
    <p
      class="base regular small text end"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders an inactive StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow inactive"
    role="status"
  >
    <div
      class="statusIndicatorWrapper"
    >
      <span
        class="statusIndicator"
        data-testid="ATL-Status-Indicator-inactive"
      />
    </div>
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders an informative StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow informative"
    role="status"
  >
    <div
      class="statusIndicatorWrapper"
    >
      <span
        class="statusIndicator"
        data-testid="ATL-Status-Indicator-informative"
      />
    </div>
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;
